# bazel-example-sops-age

./: .pre-commit-config.yaml  README.md  WORKSPACE
.github/: renovate.json
.github/workflows/: bazel.yml
age/: BUILD.bazel  sops-age-decrypt.bzl  sops-age-decrypt.sh.tpl  sops-age-encrypt.bzl
examples/multi-recipient/: BUILD.bazel
examples/single-recipient/: BUILD.bazel  sops-age-decrypt.bzl  sops-age-encrypt.sh.tpl
settings/: BUILD.bazel
