load(":sops-age-decrypt.bzl", "sops_decrypt_file")
load(":sops-age-encrypt.bzl", "sops_encrypt_files")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")

exports_files([
    "sops-age-decrypt.sh.tpl",
    "sops-age-encrypt.sh.tpl",
])


# This alias simply gives us a constant string for the binary so we can $(location <thing>).  This
# is why (if you read settings/BUILD.bazel) this was done as a simple select() rather than a proper
# toolchain
alias(
    name = "age",
    actual = select({
        # really, there should be a DRY toolchain resolution and a single value but let's get past this one first
        "//settings:linux_amd64": "@age_linux_amd64//:age",
        "//settings:osx_amd64": "@age_darwin_amd64//:age",
        # no default given yet --> build via foreign_cc ?
    }),
    visibility = ["//:__subpackages__"],
)

alias(
    name = "age-keygen",
    actual = select({
        "//settings:linux_amd64": "@age_linux_amd64//:age-keygen",
        "//settings:osx_amd64": "@age_darwin_amd64//:age-keygen",
        # no default given yet --> build via foreign_cc ?
    }),
    visibility = ["//:__subpackages__"],
)
